--- a/src/components/ProductComponents/single.css
+++ b/src/components/ProductComponents/single.css
@@ -10,13 +10,14 @@
     padding: 5%;
     flex: 1;
     width: 50%;
+    height: 80%;
 }
 
 .forinfo{
     padding: 5%;
     flex: 1;
     width: 50%;
-    border: 1px solid gray;
+    border: 1px solid rgb(245, 235, 235);
 }
 
 .ow{
