--- a/src/components/SingleProductCopm/single.css
+++ b/src/components/SingleProductCopm/single.css
@@ -51,3 +51,35 @@ h1{
     margin: 10px 0;
 }
 
+@media only screen and (min-width:321px) and (max-width:720px)
+{
+    .onepro{
+    display: block;
+}
+.forimg{
+  width: 80%;
+}
+
+.forinfo{
+    width: 80%;
+}
+
+
+}
+
+@media only screen and (min-width:0px) and (max-width:320px){
+
+    .onepro{
+        display: block;
+    }
+    .forimg{
+      width: 100%;
+    }
+    
+    .forinfo{
+        width: 100%;
+    }
+    
+}
+
+
