--- a/src/components/ControlledCarousel.css
+++ b/src/components/ControlledCarousel.css
@@ -1,5 +1,9 @@
-.img{
-    width: fit-content;
+
+.carousel {
+    width:100%;
+    height: 400px;
+    margin: auto;
+    margin-bottom: 50px;
 }
 button{
     border: none;
