--- a/src/components/Home/ControlledCarousel/ControlledCarousel.css
+++ b/src/components/Home/ControlledCarousel/ControlledCarousel.css
@@ -1,9 +1,15 @@
 
-.carousel {
+.wrapper {
     width:100%;
     height: 400px;
     margin: auto;
+    margin: 0,10px,0,10px;
     margin-bottom: 50px;
+    background-repeat: no-repeat;
+  
+}
+Image{
+    background-position: center;
 }
 button{
     border: none;
