--- a/src/components/Home/Signup/Sign.css
+++ b/src/components/Home/Signup/Sign.css
@@ -122,8 +122,9 @@
     width:30%;
     height:400px;
     margin:auto;
-    border:1px solid transparent;
+    /* border:1px solid red; */
     /* text-align:center; */
+    margin-bottom: 200px;
     font-family: futura,sans-serif;
   }
   .login_username{
