--- a/src/components/ProductComponents/product.css
+++ b/src/components/ProductComponents/product.css
@@ -10,8 +10,10 @@
 }
 
 .card{
+    justify-content: center;
+    text-align: center;
     padding: 5%;
-    height:330px;
+    height:380px;
     margin-left: 20px;
     margin-bottom: 20px;
     border: 1px solid rgb(242, 234, 234);
@@ -43,7 +45,7 @@
     font-size: 15px;
     display: inline-block;
     font-weight: 700;
-    height: 40px;
+    height: 50px;
     overflow: hidden;
     text-overflow: ellipsis;
     font-family: 'Futura', sans-serif;
@@ -106,7 +108,7 @@ h1{
   .hover-switch > img {
     position: absolute;
     height: 180px;
-    width: 15%;
+    width: 19%;
     /* border: 1px solid rgb(161, 26, 26); */
   }
 
@@ -117,13 +119,15 @@ h1{
   .x{
       /* border: 1px solid gray; */
       padding: 1%;
+      justify-content: center;
+      text-align: center;
   }
 
   .x  img{
     height: 180px;
-    width: 180px;
-    margin-left: 0%;
+    width: 190px;
     margin-bottom: 5%;
+    margin-left: 12%;
     /* border: 1px solid rgb(26, 51, 161); */
   }
 
